--- a/app/src/main/res/layout/activity_gps.xml
+++ b/app/src/main/res/layout/activity_gps.xml
@@ -9,8 +9,8 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="185dp">
 
         <fragment
             android:id="@+id/map"
@@ -20,13 +20,24 @@
 
         <ImageButton
             android:id="@+id/my_location"
-            android:layout_width="166dp"
-            android:layout_height="53dp"
+            android:layout_width="143dp"
+            android:layout_height="41dp"
             android:layout_centerHorizontal="true"
             android:background="@color/common_google_signin_btn_text_dark_default"
             android:elevation="15dp"
             android:src="@drawable/location"
             android:text="My location" />
+
+        <ImageButton
+            android:id="@+id/back_Gps"
+            android:layout_width="59dp"
+            android:layout_height="60dp"
+            android:layout_alignBottom="@id/map"
+            android:layout_alignParentEnd="true"
+            android:background="#00000000"
+            android:elevation="15dp"
+            android:src="@drawable/back"
+            android:text="back" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
