--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="@drawable/main_background">
 
     <ImageView
         android:layout_width="289dp"
@@ -21,8 +20,8 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_above="@id/Passwd"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="9dp"
         android:hint="email"
         android:selectAllOnFocus="false"
         android:singleLine="false" />
@@ -31,10 +30,11 @@
         android:id="@+id/Passwd"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
-        android:inputType="textPassword"
-        android:hint="password"/>
+        android:layout_centerHorizontal="true"
+        android:hint="password"
+        android:inputType="textPassword" />
+
 
     <ImageButton
         android:id="@+id/LoginButton"
