--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,51 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background">
+    android:background="@drawable/grid"
+    tools:context=".LoginActivity">
 
-    <ImageView
-        android:layout_width="289dp"
-        android:layout_height="252dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="70dp"
-        android:src="@drawable/icon" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="36dp">
 
-    <EditText
-        android:id="@+id/Id"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/Passwd"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="9dp"
-        android:hint="email"
-        android:selectAllOnFocus="false"
-        android:singleLine="false" />
+            <ImageView
+                android:layout_width="328dp"
+                android:layout_height="131dp"
+                android:layout_above="@+id/Id"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/icon" />
 
-    <EditText
-        android:id="@+id/Passwd"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:hint="password"
-        android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/Id"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/Passwd"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="9dp"
+                android:hint="email"
+                android:selectAllOnFocus="false"
+                android:singleLine="false" />
+
+            <EditText
+                android:id="@+id/Passwd"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:hint="password"
+                android:inputType="textPassword" />
 
 
-    <ImageButton
-        android:id="@+id/LoginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Passwd"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="#a0000000"
-        android:src="@drawable/loginbutton" />
-</RelativeLayout>
+            <ImageButton
+                android:id="@+id/LoginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_below="@+id/Passwd"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="115dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="#00000000"
+                android:src="@drawable/loginbutton" />
+    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
