--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -9,117 +9,58 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/main_background"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="305dp">
-
-
-        <EditText
-            android:id="@+id/in"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="300dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="00"
-            android:textAlignment="center"
-            android:textSize="70sp" />
-
-        <EditText
-            android:id="@+id/out"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="185dp"
-            android:layout_marginTop="300dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="00"
-            android:textAlignment="center"
-            android:textSize="70sp" />
-
-        <TextView
-            android:id="@+id/inText"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginBottom="70dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="승차 인원"
-            android:textAlignment="center"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/outText"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="185dp"
-            android:layout_marginBottom="70dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="하차 인원"
-            android:textAlignment="center"
-            android:textSize="24sp" />
+        android:background="@drawable/list_background"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="219dp">
 
         <ImageButton
             android:id="@+id/back_student"
-            android:layout_width="59dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="27dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/back" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="63dp"
+            android:background="@drawable/make" />
+
+        <ImageButton
+            android:id="@+id/imageButton1"
+            android:layout_width="150dp"
+            android:layout_height="157dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="516dp"
+            android:layout_marginTop="163dp"
             android:layout_marginEnd="24dp"
-            android:background="#00000000"
-            android:elevation="15dp"
-            android:src="@drawable/back"
-            android:text="back"
-            tools:layout_editor_absoluteX="39dp"
-            tools:layout_editor_absoluteY="36dp" />
+            android:background="@drawable/plus" />
 
-        <Button
-            android:id="@+id/BusBtn3"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/Passwd"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="225dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="3번 버스" />
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="150dp"
+            android:layout_height="157dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="347dp"
+            android:layout_marginEnd="186dp"
+            android:background="@drawable/plus" />
 
-        <Button
-            android:id="@+id/BusBtn1"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/Passwd"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="2번 버스" />
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="150dp"
+            android:layout_height="157dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="348dp"
+            android:layout_marginEnd="23dp"
+            android:background="@drawable/plus" />
 
-        <Button
-            android:id="@+id/BusBtn2"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/Passwd"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="75dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="1번 버스" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
